--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
             </div>
             <button id="addButton" onclick="addTransactions()">Add Transactions</button>
             <div class="results" id="addResults"></div>
+            <button id="editButton">Edit Transaction</button>
+            <button id="deleteButton">Delete Transaction</button>
         </div>
     </div>
 </body>
