--- a/index.html
+++ b/index.html
@@ -44,9 +44,14 @@
             </div>
             <button id="addButton" onclick="addTransactions()">Add Transactions</button>
             <div class="results" id="addResults"></div>
-            <button id="editButton">Edit Transaction</button>
-            <button id="deleteButton">Delete Transaction</button>
         </div>
-    </div>
+
+<div>
+    <button id="viewDatabaseButton">View Database Contents</button>
+    <button id="editSelectedButton">Edit Selected</button>
+    <button id="deleteSelectedButton">Delete Selected</button>
+</div>
+<div id="databaseResults"></div>
+        </div>
 </body>
 </html>
