--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <div class="container">
         <div class="tabs" style="display: flex; justify-content: space-between;">
             <div class="tab active" onclick="switchTab('search')">
-                <span class="icon">🔍</span> <span class="tab-title">Search Transaction IDs</span>
+                <span class="icon">🔍</span> <span class="tab-title">Search</span>
             </div>
             <div style="display: flex; gap: 1rem;">
                 <button class="tab" onclick="switchTab('add')">
-                    <span>+</span> Add Transactions
+                    <span class="icon">➕</span> Add Transactions
                 </button>
                 <button class="tab" onclick="switchTab('delete')">
-                    <span>X</span> Delete Transactions
+                    <span class="icon">❌</span> Delete Transactions
                 </button>
             </div>
         </div>
