--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <div class="progress-bar" id="searchProgress">
                 <div class="progress-bar-fill"></div>
             </div>
+            <button id="searchButton" onclick="searchTransactions()">Search</button>
             <div class="results" id="searchResults"></div>
         </div>
     </div>
