--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
 <body onload="initializeApp()">
     <div class="container">
         <div class="tabs" style="display: flex; justify-content: space-between;">
-            <div class="tab active">
+            <div class="tab active" onclick="switchTab('search')">
                 <span class="tab-title">Search</span>
-                <button class="circle-button add-button" onclick="openAddTransactionWindow()">+</button>
-                <button class="circle-button delete-button" onclick="openDeleteTransactionWindow()">x</button>
+            </div>
+            <div class="tab" onclick="switchTab('add')">
+                <span class="tab-title">Add Transactions</span>
+            </div>
+            <div class="tab" onclick="switchTab('delete')">
+                <span class="tab-title">Delete Transactions</span>
             </div>
         </div>
         
@@ -33,13 +37,8 @@
             <button id="searchButton" onclick="searchTransactions()">Search</button>
             <div class="results" id="searchResults"></div>
         </div>
-    </div>
 
-    <!-- Add Transaction Window -->
-    <div id="addTransactionWindow" class="modal green-theme">
-        <div class="modal-content">
-            <span class="close" onclick="closeAddTransactionWindow()">&times;</span>
-            <h2>Add Transactions</h2>
+        <div id="addTab" class="tab-content">
             <textarea id="newIds" placeholder="Enter transaction IDs to add (one per line)" spellcheck="false"></textarea>
             <div class="status-text add-status" id="addStatus"></div>
             <div class="progress-bar" id="addProgress">
@@ -48,13 +47,8 @@
             <button id="addButton" onclick="addTransactions()">Add Transactions</button>
             <div class="results" id="addResults"></div>
         </div>
-    </div>
 
-    <!-- Delete Transaction Window -->
-    <div id="deleteTransactionWindow" class="modal red-theme">
-        <div class="modal-content">
-            <span class="close" onclick="closeDeleteTransactionWindow()">&times;</span>
-            <h2>Delete Transactions</h2>
+        <div id="deleteTab" class="tab-content">
             <textarea id="deleteIds" placeholder="Enter transaction IDs to delete (one per line)" spellcheck="false"></textarea>
             <div class="status-text delete-status" id="deleteStatus"></div>
             <div class="progress-bar" id="deleteProgress">
