--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
             <div class="tab" onclick="switchTab('delete')">
                 <span class="tab-title">Delete Transactions</span>
             </div>
+            <div class="tab-icons">
+                <button class="circle-button add-button" onclick="openAddTransactionWindow()">+</button>
+                <button class="circle-button delete-button" onclick="openDeleteTransactionWindow()">x</button>
+            </div>
         </div>
         
         <div id="searchTab" class="tab-content active">
